NavigateManager in progress